Fixed avatar on small resolutions

--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -2031,18 +2031,19 @@ article > ol {
   /* Logo */
   #logo {
     display: none; }
-    #logo #avatar {
-      display: block;
-      width: 60px;
-      height: 60px;
-      border-radius: 30px;
-      position: fixed;
-      top: 6px;
-      right: 6px;
-      margin: 0;
-      border: 2px solid #fff;
-      background-color: #fff;
-      box-shadow: 0 1px 1px rgba(0,0,0,0.3); }
+
+  #avatar {
+    display: block;
+    width: 60px;
+    height: 60px;
+    border-radius: 30px;
+    position: fixed;
+    top: 6px;
+    right: 6px;
+    margin: 0;
+    border: 2px solid #fff;
+    background-color: #fff;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.3); }
 
   /* Nav */
   #nav {
@@ -2127,18 +2128,19 @@ article > ol {
   /* Logo */
   #logo {
     display: none; }
-    #logo #avatar {
-      display: block;
-      width: 50px;
-      height: 50px;
-      border-radius: 25px;
-      position: fixed;
-      top: 5px;
-      right: 5px;
-      margin: 0;
-      border: 2px solid #fff;
-      background-color: #fff;
-      box-shadow: 0 1px 1px rgba(0,0,0,0.3); }
+
+  #avatar {
+    display: block;
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    position: fixed;
+    top: 5px;
+    right: 5px;
+    margin: 0;
+    border: 2px solid #fff;
+    background-color: #fff;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.3); }
 
   /* Nav */
   #nav {
